--- a/m2/s1/g4/start2/frase.css
+++ b/m2/s1/g4/start2/frase.css
@@ -7,78 +7,56 @@
 6 animare le altre 2 parole
 7 ritardare progressivamente l'animazione delle altre 2 parole 
 */
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+html , body{
+    height: 100%;
 }
-#testoAlternato{
-    height: 80vh;
-    width: 90%;
-    margin: 0 0 15px 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(240, 234, 234);
-    border: 3px solid black;
-    font-size: 2em;
+
+body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-
-
-
-
-
-span .parole{
-    opacity: 0;
-    position: absolute;
-    top: 291px;
-    left: 616px;
-    right: 0;
-    bottom: 0;
-     transition: opacity 0.5s ease-in-out;
-}
-.interface:hover{
-    animation: fadeIn 0.5s ease-in-out 5s 1 normal forwards;
-   
-}
-.singlePage:hover{
-    animation: fadeIn 0.5s ease-in-out 5s 1 normal forwards;
-    
-}
-.nativeApp:hover{
-    animation: fadeIn 0.5s ease-in-out 5s 1 normal forwards;
-    
-    
-}
-
-
-@keyframes fadeIn{
-    0% {
-      opacity: 0;
-      transform: translateY(-20px);
-    }
-    50%{
-        opacity: 0.5;
-        transform: translate(-10px);      
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-}
-.word-container {
+    font-weight: bold;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 50px;
-    overflow: hidden;
-    position: relative;
-  }
-  .word-container input[type="radio"]:checked + .parole + .parole + .word-container .current-word {
+}
+
+#testoAlternato{
+    border: 3px solid rgb(74, 74, 74);
+    width: fit-content;
+    padding: 20px 20px;
+    padding-right: 100px;
+    margin-top: 30px;
+}
+
+.parole {
+    color: rgb(130, 175, 175);
+}
+
+.parole i:first-child{
+    position: absolute;
+    animation: scrolling 8s ease 0s infinite ;
+}
+
+.parole i:nth-of-type(2){
+    position: absolute;
     opacity: 0;
-  }
-  .word-container input[type="radio"]:checked + .parole + .parole + .word-container .current-word {
-    opacity: 1;
-  }
+    animation: scrolling 8s ease 1.5s infinite;
+}
+
+.parole i:last-child{
+    position: absolute;
+    opacity: 0;
+    animation: scrolling 8s ease 3s infinite;
+}
+
+@keyframes scrolling{
+    0%{
+        transform: translateY(-15px);
+    }
+    30%{
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    60%, 100%{
+        transform: translateY(15px);
+        opacity: 0;
+    }
+}
