--- a/m2/s2/g4/style.scss
+++ b/m2/s2/g4/style.scss
@@ -16,3 +16,10 @@ nav{
     }
 }
 
+$btn-colors: ("blue": #0e6cff, "orange": #ff8700, "green": #4caf50);
+@each $name, $col in $btn-colors{
+    .btn-#{$name}{
+        background-color: $col;
+        color: #f4f4f4;
+    }
+}
