--- a/m3/s2/progetto mese3/todo-app/src/app/pages/completati/completati.component.html
+++ b/m3/s2/progetto mese3/todo-app/src/app/pages/completati/completati.component.html
@@ -5,10 +5,12 @@
     <tr *ngFor="let todo of todoArray">
       <td>
 
-          {{ todo.title }}
+         - {{ todo.title }}
 
       </td>
 
 
     </tr>
   </table>
+
+</body>
