--- a/m3/s2/progetto mese3/todo-app/src/app/component/footer/footer.component.html
+++ b/m3/s2/progetto mese3/todo-app/src/app/component/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<footer>
+  <div class="footer"><h3><a [href]="'urlEpicode'" target="_blank"> EPICODE</a></h3></div>
+</footer>
