--- a/m3/s2/progetto mese3/todo-app/src/app/component/header/header.component.scss
+++ b/m3/s2/progetto mese3/todo-app/src/app/component/header/header.component.scss
@@ -7,13 +7,15 @@ nav{
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   justify-content: center;
+  z-index: 3;
 }
 h2{
   margin: 50px;
   text-align: center;
+  color: yellow
 }
 h2:hover{
-  color: blueviolet;
+
   scale: 1.2;
   cursor: pointer;
 }
