--- a/m3/s3/g4/progetto4/src/pages/auth/auth.component.html
+++ b/m3/s3/g4/progetto4/src/pages/auth/auth.component.html
@@ -1,13 +1,18 @@
-<h1>BEN VENUTO</h1>
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <a class="btn btn-primary" [routerLink]="['login']">Accedi</a>
-    </div>
-    <div class="col">
-      <a class="btn btn-primary" [routerLink]="['register']">Registrati</a>
+<main class="text-center">
+  <div class="container">
+    <div class="row">
+      <h1 class="pb-5 mt-4 fw-bold ">BEN VENUTO</h1>
+      <div class="row">
+        <div class="col-4">
+          <a class="btn btn-primary" [routerLink]="['login']">Accedi</a>
+        </div>
+        <div class="col-4">
+          <a class="btn btn-primary" [routerLink]="['register']">Registrati</a>
+        </div>
+        <div class="col-4">
+          <a class="btn btn-primary" [routerLink]="['/']">HOME</a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
+</main>
