--- a/m3/s3/g4/progetto4/src/pages/auth/dashboard/edit-pizza/edit-pizza.component.css
+++ b/m3/s3/g4/progetto4/src/pages/auth/dashboard/edit-pizza/edit-pizza.component.css
@@ -5,31 +5,35 @@ span{
 
   background-color: rgb(219, 133, 133);
 }
+
 main{
-  height: 100vh;
+
   font-family: Arial, Helvetica, sans-serif;
   background-image:url(https://i.etsystatic.com/30286277/r/il/d9ba59/4015092259/il_570xN.4015092259_oa9y.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+
+}
+.container{
+
+  display: flex;
+  width: 100vw;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 h2{
   font-size: 3em;
-  color:rgb(35, 204, 63)
+  color:rgb(0, 245, 41)
 }
-
-
 button{
   margin-top: 20px;
   border: 3px solid rgb(185, 157, 103);
   font-size: 1.5em;
   border-radius: 50%;
 }
-.container{
-
-  display: flex;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+body{
+  height: 100%;
 }
